Prevent write-only-with-queue on synthetic indexes